--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -21,5 +21,18 @@
         "support": "who do you support?",
         "password": "password",
         "confirm_password": "confirm password"
+    },
+    "helpers": {
+        "email": "Email is not in the correct format",
+        "password": "Password is not in the correct format",
+        "passwords_dont_match": "Passwords do not match",
+        "password_length": "Password length cant exceed 20 or be less than 6 characters",
+        "code": "Code is not in the correct format",
+        "name": "Name is not in the correct format",
+        "last_name": "Last name is not in the correct format",
+        "company_name": "Company name is not in the correct format",
+        "years_playing": "Years playing is not in the correct format",
+        "years_playing_large": "Years playing kendama can't exceed 15"
+
     }
 }
