--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -33,5 +33,9 @@
         "company_name": "Company name is not in the correct format",
         "years_playing": "Years playing is not in the correct format",
         "years_playing_large": "Years playing kendama can't exceed 15"
+    },
+    "register_provider_errors": {
+        "sign_up_error": "Error while signing up: ",
+        "data_update_error": "Error while updating data, message:"
     }
 }
