--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -4,7 +4,7 @@
         "app_description": "kendamanomics is an app to help players progress their Kendama skill",
         "app_ranking_description": "we also have a ranking system that ranks players based on tricks laced and competitions won",
         "fill_in_fields": "please make sure to fill in your information correctly:"
-    },
+    },  
     "buttons": {
         "create_an_account": "create an account",
         "login": "login",
@@ -20,7 +20,8 @@
         "experience": "# years playing kendama",
         "support": "who do you support?",
         "password": "password",
-        "confirm_password": "confirm password"
+        "confirm_password": "confirm password",
+        "username": "username"
     },
     "helpers": {
         "email": "Email is not in the correct format",
