Implemented tamas page, loading from statics (#6)
* created tamas page, missing badges

* added trophy icons

* finishing ui

* implemented reading cached tamas and groups from files

* implemented loading tricks and adding them to tamas

* working on comments

--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -42,6 +42,10 @@
         "sign_up_error": "Error while signing up: ",
         "data_update_error": "Error while updating data, message:"
     },
+    "default_titles": {
+        "tama_group": "Tama group",
+        "tama": "Tama"
+    },
     "snackbar": {
         "error_email": "This email doesn't exist",
         "error_server": "There was an error with the server"
