Marko tricks table (#8)
* Update

* Update en.json

* Page setup

* Tricks sorting logic

* fetched tama groups name

* Update tricks_page.dart

* update

* update

* Tickets update

* Updates

* Icon export

* added sorting

* formatted title

* improved trick ui

* added dummy status

---------

Co-authored-by: mradisavljevic <mradisavljevicmas@gmail.com>

--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -47,7 +47,10 @@
         "tama": "Tama"
     },
     "snackbar": {
-        "error_email": "This email doesn't exist",
+        "error_email_register": "This email is already in use",
         "error_server": "There was an error with the server"
+    },
+    "tricks_page": {
+        "tricks": "tricks"
     }
 }
