--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -66,7 +66,7 @@
         "denied": "denied by admin",
         "laced": "accepted by admin",
         "revoked": "revoked by user",
-        "point_awarded": "+1 point awarded to user for "
+        "awarded": "+1 point awarded to user for "
     },
     "leaderboards": {
         "kendamanomics": "kendamanomics",
