Implemented profile page, settings, updating player company, loading animation
* rough damxwidget

* refactoring

* Updates

* updates

* image show

* Update

* small update

* foreign player query

* my id

* added player id pathing

* a

* player id parsing

* comments

* updated image upload

* update

* refactoring player

* Updates on profile

* leaderboard type size added

* update on size again

* resolving something

* Badge Model

* Badge model updated

* renam,ed

* updates

* fetchPlayerBadge rpc

* degrade

* trophy icon exported

* updated fetching of badges

* ui changes

* Updates

* font. test

* Resolving final comments

* Settings page setup

* settings

* localization, placeholder for change teams

* updates

* added bottom nav image

* implemented image updating in bottom nav

* Update profile_page_provider.dart

* Update main.dart

* conflicts

* fixes

* gif loading animation

* changing companies

* fixed startup bug

---------

Co-authored-by: NikolaCredeo <n.milosevic0111@gmail.com>

--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -11,6 +11,7 @@
     "buttons": {
         "create_an_account": "create an account",
         "login": "login",
+        "logout": "logout",
         "change_password": "change password",
         "reset_password": "send email",
         "forgot_password": "forgot password?",
@@ -75,5 +76,17 @@
         "kendamanomics": "kendamanomics",
         "competition": "competition",
         "overall": "overall"
+    },
+    "profile_page" : {
+        "settings": "settings",
+        "damx": "damx",
+        "points": "points",
+        "pick_team":"Pick team"
+    },
+    "settings_page": {
+        "name": "name",
+        "team": "team",
+        "username": "username",
+        "email": "email"
     }
 }
