Nikola support request (#26)
* adding logs for more detailed support requests

* adding button for reporting a bug

--- a/assets/localization/en.json
+++ b/assets/localization/en.json
@@ -95,6 +95,7 @@
         "name": "name",
         "team": "team",
         "username": "username",
-        "email": "email"
+        "email": "email",
+        "report_bug": "report bug"
     }
 }
